<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.comp7855_project.MainActivity">
    <ImageView
        android:id="@+id/ivMain"
        android:layout_width="wrap_content"
        android:layout_height="324dp"
        android:src="@mipmap/ic_launcher"
        android:adjustViewBounds="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/btnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="left"
        android:layout_marginBottom="50dp"
        android:layout_above="@+id/btnCamera"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="11dp"
        android:rotation="-1"
        android:layout_marginStart="11dp" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnLeft"
        android:layout_alignParentStart="true"
        android:layout_marginStart="154dp"
        android:layout_marginLeft="154dp"
        android:layout_marginBottom="50dp"
        android:rotation="1"
        android:text="Share" />

    <Button
        android:id="@+id/btnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnLeft"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="11dp"
        android:text="right" />

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnCamera"
        android:layout_alignBottom="@+id/btnCamera"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="0dp"
        android:text="Search" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="snap"
        android:onClick="takePicture"
        android:layout_marginBottom="29dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnLeft"
        android:layout_alignStart="@+id/btnLeft" />

    <TextView
        android:id="@+id/lblCaption"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnLeft"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="225dp"
        android:text="Caption:"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/entryCaption"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnLeft"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="215dp"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:imeOptions="actionDone"
        android:lines="1"
        android:singleLine="true"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/lblLocation"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnLeft"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="325dp"
        android:text="Location:"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/lblCoord"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnLeft"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="325dp"
        android:text="000, 000"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/lblDate"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnLeft"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="295dp"
        android:text="Date:"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/lblDate_Num"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnLeft"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="295dp"
        android:text="April 20, 2020"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/lblTime"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnLeft"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="260dp"
        android:text="Time:"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/lblTime_Num"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnLeft"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="260dp"
        android:text="4:20 pm"
        android:textSize="20dp" />

    <Button
        android:id="@+id/upload_tomcat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="27dp"
        android:layout_toStartOf="@+id/btnFilter"
        android:layout_toEndOf="@+id/btnCamera"
        android:text="Upload" />

</RelativeLayout>
