<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.comp7855_project.SearchActivity">

    <TextView
        android:id="@+id/search_LocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="330dp"
        android:text="Location:" />

    <EditText
        android:id="@+id/search_LocationX"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="315dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="X"
        android:inputType="text" />

    <EditText
        android:id="@+id/search_LocationY"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="315dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="Y"
        android:inputType="text" />

    <EditText
        android:id="@+id/search_Radius"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="230dp"
        android:layout_marginTop="315dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="RADIUS"
        android:inputType="text" />

    <EditText
        android:id="@+id/search_fromDay"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="135dp"
        android:hint="DD"
        android:gravity="center_horizontal"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/search_fromMonth"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="135dp"
        android:hint="MM"
        android:gravity="center_horizontal"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/search_fromYear"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="230dp"
        android:layout_marginTop="135dp"
        android:hint="YYYY"
        android:gravity="center_horizontal"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/search_fromDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:text="From Date: " />

    <EditText
        android:id="@+id/search_toDay"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="235dp"
        android:hint="DD"
        android:gravity="center_horizontal"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/search_toMonth"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="235dp"
        android:hint="MM"
        android:gravity="center_horizontal"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/search_toYear"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="230dp"
        android:layout_marginTop="235dp"
        android:hint="YYYY"
        android:gravity="center_horizontal"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/search_toDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="250dp"
        android:text="To Date: " />

    <TextView
        android:id="@+id/search_TagSearchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="400dp"
        android:text="Tag: " />

    <EditText
        android:id="@+id/search_Tag"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="385dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="(Optional)"
        android:imeOptions="actionDone"
        android:lines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/search_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="25dp"
        android:onClick="cancel"
        android:text="Cancel" />

    <Button
        android:id="@+id/search_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="520dp"
        android:onClick="search"
        android:text="Search" />

    <TextView
        android:id="@+id/title_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="Search Library"
        android:textSize="30sp" />

</RelativeLayout>
